mqa mha long runs

--- a/jupyter_notebooks/mfu.ipynb
+++ b/jupyter_notebooks/mfu.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_layers = 136\n",
+    "n_layers = 16\n",
     "dmodel = 64 * n_layers\n",
     "n_experts = 1\n",
     "dff = n_experts * 4 * (dmodel)"
@@ -23,8 +23,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "active / total: 124.07B / 124.51B\n",
-      "active / total: 124074.89M / 124510.09M\n"
+      "active / total: 0.25B / 0.30B\n",
+      "active / total: 252.53M / 303.73M\n"
      ]
     }
    ],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "4ba60a77",
    "metadata": {},
    "outputs": [
@@ -50,43 +50,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tokens: 17.04B\n"
+      "tokens: 41.94B\n"
      ]
     }
    ],
    "source": [
-    "sl = 512\n",
-    "bs = 512\n",
-    "steps = 65_000\n",
+    "sl = 2048\n",
+    "bs = 64\n",
+    "steps = 320_001\n",
     "tokens = sl * bs * steps\n",
     "print(f\"tokens: {tokens / 1e9:.2f}B\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3a895248",
    "metadata": {},
    "outputs": [],
    "source": [
-    "time = 24 * 60 ** 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "86780a20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h100 = (1_979 / 2) * 1e12\n",
-    "a100 = 312 * 1e12\n",
-    "n_gpus = 400"
+    "time = 2 * 24 * 60 ** 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "86780a20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h100 = (1_979 / 2) * 1e12\n",
+    "# a100 = 312 * 1e12\n",
+    "n_gpus = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "76637ad2",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.419712e+22\n"
+      "6.839424e+20\n"
      ]
     }
    ],
