updated eval notebook for real models

--- a/jupyter_notebooks/ctx_scl_eval.ipynb
+++ b/jupyter_notebooks/ctx_scl_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0c895ecb",
    "metadata": {},
    "outputs": [],
@@ -26,9 +26,7 @@
     "from torch.distributed.fsdp import FullyShardedDataParallel as FSDP\n",
     "import torch.distributed.checkpoint as dcp\n",
     "from torch.utils.data import DataLoader\n",
-    "\n",
-    "from src.core.checkpointing import TrainingState\n",
-    "\n"
+    "from torch.distributed.checkpoint.stateful import Stateful"
    ]
   },
   {
@@ -67,17 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "874fbc35",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- paths ---\n",
-    "CKPT_DIR = \"/storage_nvme_4/nano/models/112902/0/step_100\"\n",
+    "CKPT_DIR = \"/storage_nvme_4/nano/models/from_helios/mqa_dff3520/step_320000\"\n",
     "DATASET_DIR = \"/storage_nvme_1/llm-random/datasets/c4/long_context_2048n8192\"\n",
-    "OUT_CSV = \"per_token_loss.csv\"\n",
-    "SEQ_LEN = 512   # set to 8192 if you want hard truncation to context size\n",
-    "BATCH_SIZE = 32"
+    "OUT_CSV = \"MQA_3520_loss_k16_42B.csv\"\n",
+    "SEQ_LEN = 2048   # set to 8192 if you want hard truncation to context size\n",
+    "BATCH_SIZE = 32\n",
+    "exp_config_name = \"ctx_scl_k16_long_mqa\"    # remember to pick grid variables"
    ]
   },
   {
@@ -91,7 +90,7 @@
      "output_type": "stream",
      "text": [
       "Model instantiated on cuda:0\n",
-      "Parameters: 295,900,160\n"
+      "Parameters: 311,628,800\n"
      ]
     },
     {
@@ -107,7 +106,7 @@
     "config_dir = str(Path.cwd() / \"configs\")\n",
     "\n",
     "with initialize_config_dir(config_dir=config_dir, version_base=None):\n",
-    "    cfg = compose(config_name=\"tiny_remote_ctx_scl\")\n",
+    "    cfg = compose(config_name=exp_config_name)\n",
     "\n",
     "model = instantiate(cfg.model, _convert_=\"all\").to(device)\n",
     "model.eval()\n",
@@ -131,26 +130,14 @@
       "/storage_nvme_4/nano/pixi/.pixi/envs/default/lib/python3.12/site-packages/torch/distributed/fsdp/_state_dict_utils.py:763: UserWarning: When using ``NO_SHARD`` for ``ShardingStrategy``, full_state_dict willbe returned.\n",
       "  warnings.warn(\n",
       "/storage_nvme_4/nano/pixi/.pixi/envs/default/lib/python3.12/site-packages/torch/distributed/fsdp/_state_dict_utils.py:701: UserWarning: When using ``NO_SHARD`` for ``ShardingStrategy``, full_state_dict willbe returned.\n",
-      "  warnings.warn(\n",
-      "/storage_nvme_4/nano/pixi/.pixi/envs/default/lib/python3.12/site-packages/torch/distributed/distributed_c10d.py:859: UserWarning: `_get_pg_default_device` will be deprecated, it only stays for backward-compatiblity reason. If you need to find a device for object collectives, please use `_get_object_coll_device`. If you need to query the device types supported by group, please use `_device_capability(group)`. \n",
-      "  warnings.warn(\n",
-      "/storage_nvme_4/nano/pixi/.pixi/envs/default/lib/python3.12/site-packages/torch/distributed/checkpoint/planner_helpers.py:406: FutureWarning: Please use DTensor instead and we are deprecating ShardedTensor.\n",
-      "  device = getattr(value, \"device\", None)\n",
-      "/storage_nvme_4/nano/pixi/.pixi/envs/default/lib/python3.12/site-packages/torch/distributed/checkpoint/default_planner.py:463: FutureWarning: Please use DTensor instead and we are deprecating ShardedTensor.\n",
-      "  and md.size != obj.size()\n",
-      "/storage_nvme_4/nano/pixi/.pixi/envs/default/lib/python3.12/site-packages/torch/distributed/_state_dict_utils.py:40: FutureWarning: Please use DTensor instead and we are deprecating ShardedTensor.\n",
-      "  dim_0_size = sharded_tensor.size()[0]  # type: ignore[index]\n",
-      "/storage_nvme_4/nano/pixi/.pixi/envs/default/lib/python3.12/site-packages/torch/distributed/_state_dict_utils.py:41: FutureWarning: Please use DTensor instead and we are deprecating ShardedTensor.\n",
-      "  tensor_numel = sharded_tensor.size().numel()  # type: ignore[union-attr]\n",
-      "/storage_nvme_4/nano/pixi/.pixi/envs/default/lib/python3.12/site-packages/torch/distributed/_state_dict_utils.py:65: FutureWarning: Please use DTensor instead and we are deprecating ShardedTensor.\n",
-      "  tensor = tensor.narrow(0, 0, tensor_numel).reshape(sharded_tensor.size())\n"
+      "  warnings.warn(\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Sharded checkpoint loaded via TrainingState\n"
+      "✅ Model loaded for inference (optimizer skipped)\n"
      ]
     },
     {
@@ -165,18 +152,21 @@
     }
    ],
    "source": [
-    "optimizer = torch.optim.AdamW(fsdp_model.parameters(), lr=0.0)\n",
-    "scheduler = instantiate(cfg.trainer.scheduler)(\n",
-    "    optimizer=optimizer, n_steps=cfg.trainer.n_steps\n",
-    ")\n",
-    "state = {\"app\": TrainingState(fsdp_model, optimizer, scheduler)}\n",
+    "class ModelOnly(Stateful):\n",
+    "    def __init__(self, model):\n",
+    "        self.model = model\n",
     "\n",
-    "dcp.load(\n",
-    "    state,\n",
-    "    checkpoint_id=CKPT_DIR,\n",
-    ")\n",
+    "    def state_dict(self):\n",
+    "        return {\"model\": self.model.state_dict()}\n",
     "\n",
-    "print(\"✅ Sharded checkpoint loaded via TrainingState\")\n"
+    "    def load_state_dict(self, sd):\n",
+    "        self.model.load_state_dict(sd[\"model\"], strict=True)\n",
+    "\n",
+    "state = {\"app\": ModelOnly(fsdp_model)}\n",
+    "dcp.load(state, checkpoint_id=CKPT_DIR)\n",
+    "\n",
+    "fsdp_model.eval()\n",
+    "print(\"✅ Model loaded for inference (optimizer skipped)\")\n"
    ]
   },
   {
@@ -291,7 +281,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75a6c52f075e4ee0be0661876c0a5814",
+       "model_id": "655c90093c934c398bc3e587a66010d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -315,16 +305,12 @@
     "\n",
     "all_losses = []\n",
     "\n",
-    "with open(OUT_CSV, \"w\") as f:\n",
-    "    f.write(\"sample_idx,token_pos,token_id,loss,url,timestamp\\n\")\n",
+    "for batch in tqdm(loader):\n",
+    "    if batch is None:\n",
+    "        continue\n",
     "\n",
-    "    sample_idx = 0\n",
-    "    for batch in tqdm(loader):\n",
-    "        if batch is None:\n",
-    "            continue\n",
-    "\n",
-    "        losses, targets = batch_per_token_losses(model, batch[\"input_ids\"])\n",
-    "        all_losses.append(losses)\n"
+    "    losses, targets = batch_per_token_losses(model, batch[\"input_ids\"])\n",
+    "    all_losses.append(losses)\n"
    ]
   },
   {
@@ -351,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensors_rows_to_csv(all_losses, path=\"per_token_loss.csv\")"
+    "tensors_rows_to_csv(all_losses, path=OUT_CSV)"
    ]
   },
   {
@@ -392,167 +378,167 @@
        "      <th>8</th>\n",
        "      <th>9</th>\n",
        "      <th>...</th>\n",
-       "      <th>501</th>\n",
-       "      <th>502</th>\n",
-       "      <th>503</th>\n",
-       "      <th>504</th>\n",
-       "      <th>505</th>\n",
-       "      <th>506</th>\n",
-       "      <th>507</th>\n",
-       "      <th>508</th>\n",
-       "      <th>509</th>\n",
-       "      <th>510</th>\n",
+       "      <th>2037</th>\n",
+       "      <th>2038</th>\n",
+       "      <th>2039</th>\n",
+       "      <th>2040</th>\n",
+       "      <th>2041</th>\n",
+       "      <th>2042</th>\n",
+       "      <th>2043</th>\n",
+       "      <th>2044</th>\n",
+       "      <th>2045</th>\n",
+       "      <th>2046</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>4.085172</td>\n",
-       "      <td>9.934204</td>\n",
-       "      <td>8.996014</td>\n",
-       "      <td>11.504110</td>\n",
-       "      <td>9.986458</td>\n",
-       "      <td>5.382188</td>\n",
-       "      <td>8.986745</td>\n",
-       "      <td>7.447004</td>\n",
-       "      <td>7.199303</td>\n",
-       "      <td>4.985841</td>\n",
+       "      <td>0.380030</td>\n",
+       "      <td>8.621256</td>\n",
+       "      <td>6.870979</td>\n",
+       "      <td>7.890626</td>\n",
+       "      <td>8.752855</td>\n",
+       "      <td>1.675966</td>\n",
+       "      <td>7.656805</td>\n",
+       "      <td>4.865206</td>\n",
+       "      <td>2.138330</td>\n",
+       "      <td>3.451378</td>\n",
        "      <td>...</td>\n",
-       "      <td>7.789421</td>\n",
-       "      <td>5.581819</td>\n",
-       "      <td>8.445265</td>\n",
-       "      <td>3.161999</td>\n",
-       "      <td>8.101936</td>\n",
-       "      <td>2.602781</td>\n",
-       "      <td>5.626294</td>\n",
-       "      <td>8.515235</td>\n",
-       "      <td>11.292056</td>\n",
-       "      <td>7.314084</td>\n",
+       "      <td>2.176812</td>\n",
+       "      <td>7.168613</td>\n",
+       "      <td>4.727401</td>\n",
+       "      <td>3.990843</td>\n",
+       "      <td>1.318014</td>\n",
+       "      <td>1.044751</td>\n",
+       "      <td>2.883807</td>\n",
+       "      <td>5.411947</td>\n",
+       "      <td>4.330785</td>\n",
+       "      <td>1.583291</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10.822108</td>\n",
-       "      <td>9.538289</td>\n",
-       "      <td>11.703181</td>\n",
-       "      <td>2.757541</td>\n",
-       "      <td>6.331216</td>\n",
-       "      <td>6.654324</td>\n",
-       "      <td>3.294222</td>\n",
-       "      <td>9.728536</td>\n",
-       "      <td>5.596427</td>\n",
-       "      <td>7.050842</td>\n",
+       "      <td>10.219949</td>\n",
+       "      <td>7.931793</td>\n",
+       "      <td>9.692278</td>\n",
+       "      <td>2.566181</td>\n",
+       "      <td>5.394570</td>\n",
+       "      <td>5.408353</td>\n",
+       "      <td>0.116439</td>\n",
+       "      <td>4.205744</td>\n",
+       "      <td>6.292889</td>\n",
+       "      <td>3.137556</td>\n",
        "      <td>...</td>\n",
-       "      <td>5.177627</td>\n",
-       "      <td>8.263029</td>\n",
-       "      <td>4.265507</td>\n",
-       "      <td>5.648528</td>\n",
-       "      <td>8.326301</td>\n",
-       "      <td>3.465414</td>\n",
-       "      <td>1.184136</td>\n",
-       "      <td>9.803685</td>\n",
-       "      <td>10.910895</td>\n",
-       "      <td>8.787147</td>\n",
+       "      <td>5.322657</td>\n",
+       "      <td>2.968103</td>\n",
+       "      <td>2.034466</td>\n",
+       "      <td>2.765616</td>\n",
+       "      <td>3.947982</td>\n",
+       "      <td>3.603583</td>\n",
+       "      <td>8.287707</td>\n",
+       "      <td>0.894379</td>\n",
+       "      <td>1.263876</td>\n",
+       "      <td>1.332970</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3.437046</td>\n",
-       "      <td>4.038119</td>\n",
-       "      <td>7.277862</td>\n",
-       "      <td>6.908977</td>\n",
-       "      <td>7.173857</td>\n",
-       "      <td>9.113975</td>\n",
-       "      <td>4.560616</td>\n",
-       "      <td>8.288863</td>\n",
-       "      <td>3.227307</td>\n",
-       "      <td>11.024434</td>\n",
+       "      <td>1.066014</td>\n",
+       "      <td>6.690225</td>\n",
+       "      <td>2.764734</td>\n",
+       "      <td>3.897488</td>\n",
+       "      <td>4.028049</td>\n",
+       "      <td>5.534327</td>\n",
+       "      <td>1.602152</td>\n",
+       "      <td>6.999635</td>\n",
+       "      <td>4.307511</td>\n",
+       "      <td>10.394428</td>\n",
        "      <td>...</td>\n",
-       "      <td>8.091841</td>\n",
-       "      <td>10.495870</td>\n",
-       "      <td>4.027703</td>\n",
-       "      <td>11.385570</td>\n",
-       "      <td>8.660601</td>\n",
-       "      <td>6.807249</td>\n",
-       "      <td>3.459799</td>\n",
-       "      <td>4.571454</td>\n",
-       "      <td>7.038602</td>\n",
-       "      <td>2.673347</td>\n",
+       "      <td>3.829848</td>\n",
+       "      <td>0.104630</td>\n",
+       "      <td>0.028694</td>\n",
+       "      <td>2.512537</td>\n",
+       "      <td>3.888413</td>\n",
+       "      <td>0.497884</td>\n",
+       "      <td>6.186173</td>\n",
+       "      <td>0.112987</td>\n",
+       "      <td>11.303635</td>\n",
+       "      <td>4.428379</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>9.886657</td>\n",
-       "      <td>3.729474</td>\n",
-       "      <td>8.190474</td>\n",
-       "      <td>9.948400</td>\n",
-       "      <td>9.285893</td>\n",
-       "      <td>11.868690</td>\n",
-       "      <td>10.385446</td>\n",
-       "      <td>5.357697</td>\n",
-       "      <td>10.134768</td>\n",
-       "      <td>3.330999</td>\n",
+       "      <td>3.484951</td>\n",
+       "      <td>0.065470</td>\n",
+       "      <td>5.952685</td>\n",
+       "      <td>9.535594</td>\n",
+       "      <td>8.614286</td>\n",
+       "      <td>7.266953</td>\n",
+       "      <td>0.302838</td>\n",
+       "      <td>2.081389</td>\n",
+       "      <td>0.015525</td>\n",
+       "      <td>0.015402</td>\n",
        "      <td>...</td>\n",
-       "      <td>11.794025</td>\n",
-       "      <td>7.370442</td>\n",
-       "      <td>10.625010</td>\n",
-       "      <td>11.624344</td>\n",
-       "      <td>9.877463</td>\n",
-       "      <td>12.368013</td>\n",
-       "      <td>4.121586</td>\n",
-       "      <td>4.333259</td>\n",
-       "      <td>7.558920</td>\n",
-       "      <td>7.106237</td>\n",
+       "      <td>0.000632</td>\n",
+       "      <td>1.034212</td>\n",
+       "      <td>0.010907</td>\n",
+       "      <td>1.349706</td>\n",
+       "      <td>0.044986</td>\n",
+       "      <td>0.014288</td>\n",
+       "      <td>0.000107</td>\n",
+       "      <td>0.001127</td>\n",
+       "      <td>0.002771</td>\n",
+       "      <td>0.006391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7.346539</td>\n",
-       "      <td>13.069561</td>\n",
-       "      <td>12.154629</td>\n",
-       "      <td>11.288257</td>\n",
-       "      <td>7.264080</td>\n",
-       "      <td>4.670476</td>\n",
-       "      <td>4.505062</td>\n",
-       "      <td>10.830602</td>\n",
-       "      <td>10.596910</td>\n",
-       "      <td>4.051549</td>\n",
+       "      <td>3.171163</td>\n",
+       "      <td>13.471144</td>\n",
+       "      <td>3.424521</td>\n",
+       "      <td>8.452765</td>\n",
+       "      <td>6.609230</td>\n",
+       "      <td>3.802885</td>\n",
+       "      <td>5.457229</td>\n",
+       "      <td>13.996242</td>\n",
+       "      <td>4.587484</td>\n",
+       "      <td>4.963999</td>\n",
        "      <td>...</td>\n",
-       "      <td>9.952202</td>\n",
-       "      <td>9.714775</td>\n",
-       "      <td>2.942371</td>\n",
-       "      <td>10.537815</td>\n",
-       "      <td>3.000067</td>\n",
-       "      <td>13.041159</td>\n",
-       "      <td>10.456656</td>\n",
-       "      <td>6.487325</td>\n",
-       "      <td>2.987190</td>\n",
-       "      <td>9.749381</td>\n",
+       "      <td>4.449986</td>\n",
+       "      <td>2.700965</td>\n",
+       "      <td>0.352735</td>\n",
+       "      <td>0.698385</td>\n",
+       "      <td>4.651100</td>\n",
+       "      <td>9.894043</td>\n",
+       "      <td>10.196079</td>\n",
+       "      <td>0.055088</td>\n",
+       "      <td>4.668685</td>\n",
+       "      <td>2.494915</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 511 columns</p>\n",
+       "<p>5 rows × 2047 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           0          1          2          3         4          5          6  \\\n",
-       "0   4.085172   9.934204   8.996014  11.504110  9.986458   5.382188   8.986745   \n",
-       "1  10.822108   9.538289  11.703181   2.757541  6.331216   6.654324   3.294222   \n",
-       "2   3.437046   4.038119   7.277862   6.908977  7.173857   9.113975   4.560616   \n",
-       "3   9.886657   3.729474   8.190474   9.948400  9.285893  11.868690  10.385446   \n",
-       "4   7.346539  13.069561  12.154629  11.288257  7.264080   4.670476   4.505062   \n",
+       "           0          1         2         3         4         5         6  \\\n",
+       "0   0.380030   8.621256  6.870979  7.890626  8.752855  1.675966  7.656805   \n",
+       "1  10.219949   7.931793  9.692278  2.566181  5.394570  5.408353  0.116439   \n",
+       "2   1.066014   6.690225  2.764734  3.897488  4.028049  5.534327  1.602152   \n",
+       "3   3.484951   0.065470  5.952685  9.535594  8.614286  7.266953  0.302838   \n",
+       "4   3.171163  13.471144  3.424521  8.452765  6.609230  3.802885  5.457229   \n",
        "\n",
-       "           7          8          9  ...        501        502        503  \\\n",
-       "0   7.447004   7.199303   4.985841  ...   7.789421   5.581819   8.445265   \n",
-       "1   9.728536   5.596427   7.050842  ...   5.177627   8.263029   4.265507   \n",
-       "2   8.288863   3.227307  11.024434  ...   8.091841  10.495870   4.027703   \n",
-       "3   5.357697  10.134768   3.330999  ...  11.794025   7.370442  10.625010   \n",
-       "4  10.830602  10.596910   4.051549  ...   9.952202   9.714775   2.942371   \n",
+       "           7         8          9  ...      2037      2038      2039  \\\n",
+       "0   4.865206  2.138330   3.451378  ...  2.176812  7.168613  4.727401   \n",
+       "1   4.205744  6.292889   3.137556  ...  5.322657  2.968103  2.034466   \n",
+       "2   6.999635  4.307511  10.394428  ...  3.829848  0.104630  0.028694   \n",
+       "3   2.081389  0.015525   0.015402  ...  0.000632  1.034212  0.010907   \n",
+       "4  13.996242  4.587484   4.963999  ...  4.449986  2.700965  0.352735   \n",
        "\n",
-       "         504       505        506        507       508        509       510  \n",
-       "0   3.161999  8.101936   2.602781   5.626294  8.515235  11.292056  7.314084  \n",
-       "1   5.648528  8.326301   3.465414   1.184136  9.803685  10.910895  8.787147  \n",
-       "2  11.385570  8.660601   6.807249   3.459799  4.571454   7.038602  2.673347  \n",
-       "3  11.624344  9.877463  12.368013   4.121586  4.333259   7.558920  7.106237  \n",
-       "4  10.537815  3.000067  13.041159  10.456656  6.487325   2.987190  9.749381  \n",
+       "       2040      2041      2042       2043      2044       2045      2046  \n",
+       "0  3.990843  1.318014  1.044751   2.883807  5.411947   4.330785  1.583291  \n",
+       "1  2.765616  3.947982  3.603583   8.287707  0.894379   1.263876  1.332970  \n",
+       "2  2.512537  3.888413  0.497884   6.186173  0.112987  11.303635  4.428379  \n",
+       "3  1.349706  0.044986  0.014288   0.000107  0.001127   0.002771  0.006391  \n",
+       "4  0.698385  4.651100  9.894043  10.196079  0.055088   4.668685  2.494915  \n",
        "\n",
-       "[5 rows x 511 columns]"
+       "[5 rows x 2047 columns]"
       ]
      },
      "execution_count": 12,
@@ -561,7 +547,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"per_token_loss.csv\")\n",
+    "df = pd.read_csv(OUT_CSV)\n",
     "df.head()"
    ]
   },
