notebooks and scripts udate

--- a/jupyter_notebooks/mfu.ipynb
+++ b/jupyter_notebooks/mfu.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "4ba60a77",
    "metadata": {},
    "outputs": [
@@ -64,17 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "3a895248",
    "metadata": {},
    "outputs": [],
    "source": [
-    "time = 2 * 24 * 60 ** 2"
+    "time = 36 * 60 ** 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "86780a20",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "76637ad2",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.839424e+20\n"
+      "5.129568e+20\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "081c65c5",
    "metadata": {},
    "outputs": [
@@ -118,13 +118,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MFU: 0.3709359339215864\n"
+      "MFU: 0.12389073756486098\n"
      ]
     }
    ],
    "source": [
     "print(f\"MFU: {mfu}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3e1defe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
