--- a/jupyter_notebooks/test.ipynb
+++ b/jupyter_notebooks/test.ipynb
@@ -120,8 +120,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "df5e6bbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16848.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mth = 270 * 8 * 12\n",
+    "\n",
+    "mth * 0.65"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66da6c94",
    "metadata": {},
    "outputs": [],
    "source": []
