--- a/jupyter_notebooks/plots.ipynb
+++ b/jupyter_notebooks/plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -631,41 +631,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_csv_name(template: str, yaml_overrides: list[str]) -> str:\n",
+    "    \"\"\"Build CSV filename from template keywords and yaml_overrides values.\n",
+    "\n",
+    "    Example: template=\"kv_h,dff\", overrides=[\"common.kv_heads=4\", \"common.dff=512\"]\n",
+    "    Returns: \"kv_h=4-dff=512.csv\"\n",
+    "    \"\"\"\n",
+    "    overrides_dict = {}\n",
+    "    for ov in yaml_overrides:\n",
+    "        key, val = ov.split(\"=\", 1)\n",
+    "        overrides_dict[key.split(\".\")[-1]] = val  # use last part of key\n",
+    "\n",
+    "    parts = []\n",
+    "    for kw in template.split(\",\"):\n",
+    "        kw = kw.strip()\n",
+    "        matches = [k for k in overrides_dict if kw in k]\n",
+    "        if not matches:\n",
+    "            raise ValueError(f\"Keyword '{kw}' not found in yaml_overrides: {yaml_overrides}\")\n",
+    "        parts.append(f\"{kw}={overrides_dict[matches[0]]}\")\n",
+    "\n",
+    "    return \"+\".join(parts) + \".csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35.76040063979166\n"
+      "kv_h=1+dff=3200.csv\n"
      ]
     }
    ],
    "source": [
-    "etas = pd.read_csv(\"etas.csv\")\n",
-    "\n",
-    "print(etas[\"total\"].mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "50304"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(50257 // 64) * 64 + 64"
+    "tmplt = \"kv_h,dff\"\n",
+    "csv_names = make_csv_name(tmplt, yaml_overrides)\n",
+    "print(csv_names)"
    ]
   },
   {
@@ -673,7 +681,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": "python -m src.context_scaling.scripts.eval_models \\\n    --tags ctx_scaling 42B \\\n    --grid_params \"job_config/common/kv_heads\" \"job_config/common/dff\" \\\n    --exp_config \"configs/ctx_scl_k16_long_mqa.yaml\" \\\n    --dataset_dir /storage_nvme_1/llm-random/datasets/c4/long_context_2048n8192 \\\n    --out_csv_format \"kv_heads,dff\" \\\n    --out_dir .mhavsmqa42Bk16 \\\n    --seq_len 2048 \\\n    --batch_size 32"
   }
  ],
  "metadata": {
