TODO: finish model eval script in eval_models.sh

--- a/jupyter_notebooks/plots.ipynb
+++ b/jupyter_notebooks/plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -563,54 +563,129 @@
      "text": [
       "yaml_overrides: ['common.dff=3520', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11429262/5\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41565\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41565\n",
       "yaml_overrides: ['common.dff=3200', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11429260/3\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41564\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41564\n",
       "yaml_overrides: ['common.dff=3840', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11429256/7\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41563\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41563\n",
       "yaml_overrides: ['common.dff=3520', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11429261/4\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41562\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41562\n",
       "yaml_overrides: ['common.dff=3840', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11429263/6\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41561\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41561\n",
       "yaml_overrides: ['common.dff=3200', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11429259/2\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41560\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41560\n",
       "yaml_overrides: ['common.dff=2560', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11429258/1\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41559\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41559\n",
       "yaml_overrides: ['common.dff=2560', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11429257/0\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41558\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41558\n",
       "yaml_overrides: ['common.dff=2560', 'common.kv_heads=16']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11429254/1\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41557\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41557\n",
       "yaml_overrides: ['common.dff=2560', 'common.kv_heads=16']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11429255/0\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41556\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41556\n",
       "yaml_overrides: ['common.dff=3520', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344010/7\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41555\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41555\n",
       "yaml_overrides: ['common.dff=2560', 'common.kv_heads=16']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344015/0\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41554\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41554\n",
       "yaml_overrides: ['common.dff=3840', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344012/9\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41553\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41553\n",
       "yaml_overrides: ['common.dff=2560', 'common.kv_heads=16']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344016/1\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41552\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41552\n",
       "yaml_overrides: ['common.dff=3840', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344002/11\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41551\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41551\n",
       "yaml_overrides: ['common.dff=2560', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344003/0\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41550\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41550\n",
       "yaml_overrides: ['common.dff=2560', 'common.kv_heads=16']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344014/2\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41549\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41549\n",
       "yaml_overrides: ['common.dff=3200', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344008/5\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41548\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41548\n",
       "yaml_overrides: ['common.dff=3840', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344013/10\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41547\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41547\n",
       "yaml_overrides: ['common.dff=2560', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344005/2\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41546\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41546\n",
       "yaml_overrides: ['common.dff=3520', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344011/8\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41545\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41545\n",
       "yaml_overrides: ['common.dff=3200', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344006/3\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41544\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41544\n",
       "yaml_overrides: ['common.dff=3520', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344009/6\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41543\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41543\n",
       "yaml_overrides: ['common.dff=2560', 'common.kv_heads=1']\n",
       "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344004/1\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41542\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41542\n",
       "yaml_overrides: ['common.dff=3200', 'common.kv_heads=1']\n",
-      "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344007/4\n"
+      "ckpt_path: /net/storage/pr3/plgrid/plggllmeffi/nano/ctx_scaling/models/11344007/4\n",
+      "[]\n",
+      "run ID: LLMRANDOM-41541\n",
+      "[neptune] [info   ] Neptune initialized. Open in the app: https://app.neptune.ai/pmtest/llm-random/e/LLMRANDOM-41541\n"
      ]
     }
    ],
@@ -626,12 +701,26 @@
     "    ckpt_path = row[\"job/full_save_checkpoints_path\"]\n",
     "\n",
     "    print(f\"yaml_overrides: {yaml_overrides}\")\n",
-    "    print(f\"ckpt_path: {ckpt_path}\")\n"
+    "    print(f\"ckpt_path: {ckpt_path}\")\n",
+    "    print([c for c in df.columns if \"yaml\" in c.lower()])\n",
+    "\n",
+    "\n",
+    "    run_id = row['sys/id']  # Assuming 'sys/id' is the run identifier\n",
+    "    print(f'run ID: {run_id}')\n",
+    "    project_name = \"pmtest/llm-random\"\n",
+    "    # run_id = \"LLMRANDOM-2078\"\n",
+    "    run = neptune.init_run(\n",
+    "        project=project_name,\n",
+    "        with_id=run_id,\n",
+    "        mode=\"read-only\",\n",
+    "        api_token=os.environ[\"NEPTUNE_API_TOKEN\"],\n",
+    "    )\n",
+    "    run[\"yaml_config\"].download(destination=f\"tmp.yaml\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +770,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "python -m src.context_scaling.scripts.eval_models \\\n    --tags ctx_scaling 42B \\\n    --grid_params \"job_config/common/kv_heads\" \"job_config/common/dff\" \\\n    --exp_config \"configs/ctx_scl_k16_long_mqa.yaml\" \\\n    --dataset_dir /storage_nvme_1/llm-random/datasets/c4/long_context_2048n8192 \\\n    --out_csv_format \"kv_heads,dff\" \\\n    --out_dir .mhavsmqa42Bk16 \\\n    --seq_len 2048 \\\n    --batch_size 32"
+   "source": [
+    "python -m src.context_scaling.scripts.eval_models \\\n",
+    "    --tags context_scaling 42B \\\n",
+    "    --dataset_dir /storage_nvme_1/llm-random/datasets/c4/long_context_2048n8192 \\\n",
+    "    --out_csv_format \"kv_heads,dff\" \\\n",
+    "    --out_dir mhavsmqa42Bk16 \\\n",
+    "    --seq_len 2048 \\\n",
+    "    --batch_size 32 \\\n",
+    "    --model_step 320000 \\\n",
+    "    --tmp_ckpt_path \"/storage_nvme_4/nano/models/from_helios/rsync_from_python\""
+   ]
   }
  ],
  "metadata": {
